2008-07-07  David Athay  <ko2fan@gmail.com>

	* src/commandhandler.hpp, src/commandhandler.cpp: Added help for each 
	command based on mantis bug #359, thanks to Scraggy.
	* src/localplayer.cpp, src/commandhandler.cpp, src/gui/popupmenu.cpp,
	src/commandhandler.h, src/localplayer.h: Added /party command.

2008-07-05  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/gui.cpp: Allow foreign keyboards to use alt key
	on Mac. Remove includes no longer needed.

2008-07-04  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.cpp, src/gui/chat.h: Ugly hack for chat scrolling.

2008-07-03  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/window.cpp: Fix guild window focus and fix crash
	when typing in account login.
 
2008-07-02  Philipp Sehmisch  <tmw@crushnet.org>

	* src/being.cpp: Fixed speech bubbles staying on screen during map change bug.

2008-07-01  Roderic Morris  <roderic@ccs.neu.edu>

	* data/graphics/gui/CMakeLists.txt, src/CMakeLists.txt, src/Makefile.am:
	Add new files to CMakeLists, add missing backslash to Makefile.

2008-07-01  Philipp Sehmisch  <tmw@crushnet.org>

	* data/gui/window.cpp, data/gui/window.hpp, data/graphics/gui/default.png,
	data/graphics/gui/gui.xml, data/graphics/gui/speech_bubble.png,
	data/graphics/gui/speechbubble.xml: Added skinning support to GUI (ported from
	Legend of Mazzeroth)
	* src/being.cpp, src/gui/speechbubble.cpp, src/gui/speechbubble.hpp: Speech is
	now rendered in a speech bubble (ported from Legend of Mazzeroth).
	* src/engine.cpp: "mapname" property of map files is now used as headline of the
	minimap window (ported from Legend of Mazzeroth).
	* src/gui/inventorywindow.cpp, src/gui/inventorywindow.hpp,
	src/gui/itemcontainer.cpp, src/gui/itemcontainer.h: Item descriptions are now
	shown in a separate GUI window when the mouse cursor hovers over them
	(ported from Legend of Mazzeroth).
        * tmw.cbp, src/Makefile.am, data/graphics/gui/Makefile.am: Updated project files.
